[ui,manager,worker,analyzer]: прокидывание параметров моделей для анализа
