# dicom-manager/cmd/service/main.go
@@ -27,6 +27,8 @@ import (
 	api_report_generate "github.com/yogenyslav/ldt-2026/dicom-manager/internal/api/report/generate"
 	api_report_get_by_id "github.com/yogenyslav/ldt-2026/dicom-manager/internal/api/report/get_by_id"
 	api_report_get_paginated "github.com/yogenyslav/ldt-2026/dicom-manager/internal/api/report/get_paginated"
+	api_settings_get "github.com/yogenyslav/ldt-2026/dicom-manager/internal/api/settings/get"
+	api_settings_save "github.com/yogenyslav/ldt-2026/dicom-manager/internal/api/settings/save"
 	api_user_get_by_id "github.com/yogenyslav/ldt-2026/dicom-manager/internal/api/user/get_by_id"
 	api_user_login "github.com/yogenyslav/ldt-2026/dicom-manager/internal/api/user/login"
 	storage_annotation "github.com/yogenyslav/ldt-2026/dicom-manager/internal/storage/annotation"
@@ -34,6 +36,7 @@ import (
 	storage_job "github.com/yogenyslav/ldt-2026/dicom-manager/internal/storage/job"
 	storage_organization "github.com/yogenyslav/ldt-2026/dicom-manager/internal/storage/organization"
 	storage_report "github.com/yogenyslav/ldt-2026/dicom-manager/internal/storage/report"
+	storage_settings "github.com/yogenyslav/ldt-2026/dicom-manager/internal/storage/settings"
 	storage_user "github.com/yogenyslav/ldt-2026/dicom-manager/internal/storage/user"
 	uc_annotation "github.com/yogenyslav/ldt-2026/dicom-manager/internal/usecases/annotation"
 	uc_dicom_get_by_id "github.com/yogenyslav/ldt-2026/dicom-manager/internal/usecases/dicom/get_by_id"
@@ -49,6 +52,8 @@ import (
 	uc_report_generate "github.com/yogenyslav/ldt-2026/dicom-manager/internal/usecases/report/generate"
 	uc_report_get_by_id "github.com/yogenyslav/ldt-2026/dicom-manager/internal/usecases/report/get_by_id"
 	uc_report_get_paginated "github.com/yogenyslav/ldt-2026/dicom-manager/internal/usecases/report/get_paginated"
+	uc_settings_get "github.com/yogenyslav/ldt-2026/dicom-manager/internal/usecases/settings/get"
+	uc_settings_save "github.com/yogenyslav/ldt-2026/dicom-manager/internal/usecases/settings/save"
 	uc_user_auth "github.com/yogenyslav/ldt-2026/dicom-manager/internal/usecases/user/auth"
 	uc_user_get_by_id "github.com/yogenyslav/ldt-2026/dicom-manager/internal/usecases/user/get_by_id"
 	"github.com/yogenyslav/ldt-2026/dicom-manager/migrations"
@@ -147,6 +152,7 @@ func run() error {
 	dicomStorage := storage_dicom.New(db)
 	reportStorage := storage_report.New(db)
 	annotationStorage := storage_annotation.New(db)
+	settingsStorage := storage_settings.New(db)
 
 	// Бизнес-логика и маршруты пользователей.
 	userByID := uc_user_get_by_id.New(logger, metrics, userStorage)
@@ -156,6 +162,13 @@ func run() error {
 
 	srv.UseMiddleware(server.AuthMiddleware(userAuth.ParseToken))
 	userRouter.Get("/:user_id", api_user_get_by_id.New(logger, metrics, userByID).GetByID)
+
+	// Бизнес-логика и маршруты параметров анализа.
+	getSettings := uc_settings_get.New(logger, metrics, settingsStorage)
+	saveSettings := uc_settings_save.New(logger, metrics, settingsStorage)
+	settingsRouter := srv.Router("settings")
+	settingsRouter.Get("/", api_settings_get.New(logger, metrics, getSettings).Get)
+	settingsRouter.Put("/", api_settings_save.New(logger, metrics, saveSettings).Save)
 
 	// Бизнес-логика и маршруты организаций.
 	allOrganizations := uc_organization_get_all.New(logger, metrics, organizationStorage)
@@ -173,7 +186,7 @@ func run() error {
 	// Бизнес-логика и маршруты DICOM-файлов.
 	getDicomImage := uc_dicom_get_image.New(logger, metrics, orthancClient.Client(), dicomStorage)
 	uploadDicom := uc_dicom_upload.New(
-		logger, metrics, uow, dicomStorage, jobStorage, orthancClient, dicomWorkerClient.Client(),
+		logger, metrics, uow, dicomStorage, jobStorage, orthancClient, dicomWorkerClient.Client(), getSettings,
 	)
 	dicomRouter := srv.Router("dicom")
 	getDicomByID := uc_dicom_get_by_id.New(logger, metrics, dicomStorage)
